Overflow in the correct direction (closes GH-2269)

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -520,7 +520,7 @@ table.integrations {
 
 .event-list {
   border: 1px solid @trim;
-  overflow-y: scroll;
+  overflow-x: scroll;
   border-radius: 3px;
 
   .table {
